operator/pkg/deployer/testdata/untypedv2/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  labels:
    app: nginx
    env: dev
  name: nginx
  namespace: default
spec:
  rules:
  - host: example.local
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - example.local
    - test.local
    secretName: example-tls
